# rag-starter

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
evals/: dataset.json  runner.py  scorer.py
evals/results/: results.json  summary.json
src/: ingest.py  query.py
src/rag_starter/: ingest.py  query.py  runner.py
